<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewExpenseActivity">

    <ImageView
        android:id="@+id/new_expense_background_image"
        android:layout_width="517dp"
        android:layout_height="809dp"
        android:contentDescription="@string/newExpenseBackgroundDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/new_expense_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/newExpenseAmount"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_expense_amount_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autofillHints="@string/newExpenseAmount"
        android:ems="6"
        android:hint="@string/newExpenseAmount"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/new_expense_amount_textView"
        app:layout_constraintStart_toEndOf="@+id/new_expense_amount_textView"
        app:layout_constraintTop_toTopOf="@+id/new_expense_amount_textView" />

    <TextView
        android:id="@+id/new_expense_category_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/newExpenseCategory"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_amount_textView" />

    <Spinner
        android:id="@+id/new_expense_category_spinner"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"

        app:layout_constraintBottom_toBottomOf="@+id/new_expense_category_textView"
        app:layout_constraintStart_toEndOf="@+id/new_expense_category_textView"
        app:layout_constraintTop_toTopOf="@+id/new_expense_category_textView" />

    <TextView
        android:id="@+id/new_expense_description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/newExpenseDescription"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_new_category_button" />

    <EditText
        android:id="@+id/new_expense_description_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/newExpenseDescriptionHere"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/new_expense_description_textView"
        app:layout_constraintStart_toEndOf="@+id/new_expense_description_textView"
        app:layout_constraintTop_toTopOf="@+id/new_expense_description_textView" />

    <Button
        android:id="@+id/new_expense_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/submit"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997" />

    <Button
        android:id="@+id/new_expense_new_category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/newExpenseNewCategory"
        android:background="@drawable/buttonshape"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_category_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>