<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_budget_constraint_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewBudgetActivity">

    <ImageView
        android:id="@+id/new_budget_background_image"
        android:layout_width="526dp"
        android:layout_height="810dp"
        android:contentDescription="@string/newBudgetBackgroundDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/new_budget_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/newBudgetChooseDate"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_budget_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints="@string/newBudgetStartDate"
        android:ems="5"
        android:hint="@string/newBudgetStartDate"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/new_budget_date_textview"
        app:layout_constraintStart_toEndOf="@+id/new_budget_date_textview"
        app:layout_constraintTop_toTopOf="@+id/new_budget_date_textview" />

    <TextView
        android:id="@+id/new_budget_total_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/newBudgetTotalAmount"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/new_budget_date_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_budget_date_textview" />

    <EditText
        android:id="@+id/new_budget_amount_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/newBudgetTotalAmount"
        android:ems="6"
        android:hint="@string/newBudgetTotalAmount"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/new_budget_total_amount_textView"
        app:layout_constraintStart_toEndOf="@+id/new_budget_total_amount_textView"
        app:layout_constraintTop_toTopOf="@+id/new_budget_total_amount_textView" />

    <Button
        android:id="@+id/new_budget_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/submit"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_budget_background_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>