<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BudgetOverviewActivity">

    <ImageView
        android:id="@+id/budget_overview_background_image"
        android:layout_width="484dp"
        android:layout_height="800dp"
        android:contentDescription="@string/budgetOverviewBackgroundDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="346dp"
        android:layout_height="479dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/budget_overview_total_unspent_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/budgetOverviewUnspentMoney"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_overview_total_spent_textView" />

    <TextView
        android:id="@+id/budget_overview_total_spent_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/budgetOverviewSpentMoney"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_overview_total_textView" />

    <TextView
        android:id="@+id/budget_overview_total_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/budgetOverviewTotalMoney"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/budget_overview_total_unspent_display_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/budget_overview_total_unspent_textView"
        app:layout_constraintTop_toTopOf="@+id/budget_overview_total_unspent_textView" />

    <TextView
        android:id="@+id/budget_overview_total_spent_display_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/budget_overview_total_spent_textView"
        app:layout_constraintStart_toEndOf="@+id/budget_overview_total_spent_textView"
        app:layout_constraintTop_toTopOf="@+id/budget_overview_total_spent_textView" />

    <TextView
        android:id="@+id/budget_overview_total_display_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/budget_overview_total_textView"
        app:layout_constraintTop_toTopOf="@+id/budget_overview_total_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>